--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.3",
     "autoprefixer": "^10",
+    "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "tailwindcss": "^3",
