--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.3",
     "autoprefixer": "^10",
+    "chart.js": "^4.4.2",
     "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
+    "firebase": "^10.9.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13"
