--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "chart.js": "^4.4.2",
     "chartjs": "^0.3.24",
     "core-js": "^3.8.3",
-    "firebase": "^10.9.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
