--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.3",
+    "@supabase/supabase-js": "^2.40.0",
     "autoprefixer": "^10",
     "chart.js": "^4.4.2",
     "chartjs": "^0.3.24",
@@ -26,6 +27,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "daisyui": "^4.7.3",
+    "dotenv": "^16.4.5",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-tailwind": "~3.0.0"
